package ttps.quecomemos.modelo.usuario;

public class Administrador extends Usuario {

    public Administrador(int dni, String clave, String nombre, String apellido, String urlImagen) {
        super(dni, clave, nombre, apellido, urlImagen);
    }
}
